--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
+
 <html>
+  <title> 
+    Jehron IT 3203 Web Development Assignment 1
+  </title>
 
   <body>
     Hello there, awesome person! 
