--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-  <title> 
-    Jehron IT 3203 Web Development Assignment 1
-  </title>
-
+  
+  <head>
+      <title> 
+      Jehron IT 3203 Web Development Assignment 1
+      </title>
+  </head>
+  
   <body>
-    Hello there, awesome person! 
+    Body of the assignment! 
   </body>
 
 </html>
