--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       Jehron IT 3203 Web Development Assignment 1
       </title>
   </head>
-  
-  
+   
   <body><h1>This is a test header</h1>
+    <img src="https://avatars.githubusercontent.com/u/81543193?v=4">
   </body>
 
 </html>
