--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body><h1>This is a test header</h1>
     <img src="https://avatars.githubusercontent.com/u/81543193?v=4">
     <ol>
-      <li> Favorite site 1 www.google.com </li>
-      <li> Favorite site 2 www.github.com </li>
-      <li> Favorite site 3 www.tirerack.com </li>    
+      <li> Favorite site 1 <a href="www.google.com"> </li>
+      <li> Favorite site 2 <a href="www.github.com"> </li>
+      <li> Favorite site 3 <a href="www.tirerack.com"> </li>    
     </ol>
   
   </body>
