--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </title>
   </head>
    
-  <body><h1>This is a test header</h1>
+  <body><h1>Assignment 1 Jehron Dick IT3203</h1>
     <img src="https://avatars.githubusercontent.com/u/81543193?v=4">
   </body>
 
