--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
    
   <body><h1>This is a test header</h1>
-    <img src="https://avatars.githubusercontent.com/u/81543193?v=4">
+    <img src="https://images.pexels.com/photos/1509534/pexels-photo-1509534.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
   </body>
 
 </html>
