--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
   
   <head>
       <title> 
-      Jehron IT 3203 Web Development Assignment 1
+      Jehron's IT 3203 Web Development Assignment 1
       </title>
-  </head>
-   
+        <style>
+          img {
+            width: 100px;
+            border-radius: 50px;
+              float: left;
+              margin-right: 10px;
+            }
+        </style>
+      
+  </head>   
   <body><h1>This is a test header</h1>
-    <img src="https://avatars.githubusercontent.com/u/81543193?v=4">
+    <img src="https://avatars.githubusercontent.com/u/81543193?v=4" alt="An image of github default profile image " />
   </body>
-
 </html>
